--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/racing-siempre-trans-blanco2.png" type="image/x-icon">
-    <title>Consulta Padrón</title>
+    <title>index</title>
 </head>
 <body>
     <figure class="logo">
