--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/racing-siempre-trans-blanco2.png" type="image/x-icon">
-    <title>index</title>
+    <title>Consulta Padrón</title>
 </head>
 <body>
     <figure class="logo">
@@ -22,17 +22,17 @@
             <div class="checks">
                 <div class="check">
                     <label for="nroSocio">Buscar por número de socio</label>
-                    <input type="radio" id="nroSocio" name="">
+                    <input type="radio" checked id="nroSocio" name="">
                 </div>
                 <div class="check">
                     <label for="dni">Buscar por número de DNI</label>
-                    <input type="radio" id="dni" id="nroSocio" name="">
+                    <input type="radio" id="dni" name="">
                 </div>
             </div>
             <div class="datos">
                 <div class="dato">
                     <!-- <label for="nro">Ingrese el número de socio/DNI</label> -->
-                    <input type="text" id="nro" placeholder="Ingrese el número de socio/DNI" name="">
+                    <input type="text" id="nro" placeholder="Ingrese el número de socio" name="">
                 </div>
                 <div class="dato">
                     <!-- <label for="email">Ingrese su e-mail</label> -->
@@ -44,5 +44,13 @@
             </div>
         </form>
     </main>
+    <script>
+        var checkbox = document.getElementById('dni');
+    checkbox.addEventListener( 'change', function() {
+        if(this.checked) {
+            document.getElementById("nro").placeholder = "Ingrese el número de DNI";
+    }
+});
+    </script>
 </body>
 </html>
