check y responsive alto

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div class="checks">
                 <div class="check">
                     <label for="nroSocio">Buscar por número de socio</label>
-                    <input type="radio" checked id="nroSocio" name="">
+                    <input type="radio" checked id="nroSocio" name="numero">
                 </div>
                 <div class="check">
                     <label for="dni">Buscar por número de DNI</label>
-                    <input type="radio" id="dni" name="">
+                    <input type="radio" id="dni" name="numero">
                 </div>
             </div>
             <div class="datos">
