cambio de idioma

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -11,8 +11,8 @@
     <figure class="logo">
         <img src="img/racing-siempre-trans-blanco2.png" alt="Logo de la página">
         <div class="redes">
-            <a href="https://www.facebook.com/racingsiempreok/"><img src="img/facebookLogo.png" alt=""></a>
-            <a href="https://twitter.com/RACINGsiempreOK"><img src="img/twitterLogo.png" alt=""></a>
+            <a href="https://www.facebook.com/racingsiempreok/"><img src="img/facebookLogo.png" alt="Logo de facebook"></a>
+            <a href="https://twitter.com/RACINGsiempreOK"><img src="img/twitterLogo.png" alt="Logo de twitter"></a>
         </div>
     </figure>
     <main>
