--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="description" content="Estuvimos, estamos y estaremos SIEMPRE con RACING">
+    <meta name="keywords" content="Racing Siempre, Padrón Racing Siempre">
+    <meta name="author" content="Racing-Siempre">
+    <meta name="owner" content="Racing Siempre">
+    <meta name="robots" content="index, follow">
+    <!--Etiquetas Facebook-->
+    <meta property="og:url" content="https://www.facebook.com/racingsiempreok/" />
+    <meta property="og:type" content="Software" />
+    <meta property="og:title" content="Racing Siempre" />
+    <meta property="og:description" content="Estuvimos, estamos y estaremos SIEMPRE con RACING" />
+    <meta property="og:image" content="img/racing-siempre-trans-negro2.png" />
+    <!-- Etiquetas para Twitter-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:description" content="Estuvimos, estamos y estaremos SIEMPRE con RACING">
+    <meta name="twitter:title" content="RACING Siempre">
+    <meta name="twitter:site" content="@RACINGsiempreOK">
+    <meta name="twitter:image" content="img/racing-siempre-trans-negro2.png">
+    <meta name="twitter:creator" content="@RACINGsiempreOK">
+    <!--<link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="style.css">
