--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="datos">
                 <div class="dato">
                     <!-- <label for="nro">Ingrese el número de socio/DNI</label> -->
-                    <input type="text" id="nro" required placeholder="Ingrese el número de socio" name="">
+                    <input type="text" id="nro" placeholder="Ingrese el número de socio" name="">
                 </div>
                 <div class="dato">
                     <!-- <label for="email">Ingrese su e-mail</label> -->
