--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/racing-siempre-trans-blanco2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo2.jpeg" type="image/x-icon">
     <title>index</title>
 </head>
-<body>
+<body class="body">
     <figure class="logo">
-        <img src="img/racing-siempre-trans-blanco2.png" alt="Logo de la página">
+        <img src="img/logo2.jpeg" alt="Logo de la página">
         <div class="redes">
             <a href="https://www.facebook.com/racingsiempreok/"><img src="img/facebookLogo.png" alt="Logo de facebook"></a>
             <a href="https://twitter.com/RACINGsiempreOK"><img src="img/twitterLogo.png" alt="Logo de twitter"></a>
