--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </figure>
     <main>
         <h1>Consulta de Padrón</h1>
+        <div class="leyenda-form">
         <p>Por favor ingrese número de socio o DNI para verificar</p>
         <form action="">
             <div class="checks">
@@ -29,6 +30,9 @@
                     <input type="radio" id="dni" name="numero">
                 </div>
             </div>
+        </form>
+        </div>
+        <form action="">    
             <div class="datos">
                 <div class="dato">
                     <!-- <label for="nro">Ingrese el número de socio/DNI</label> -->
